--- a/index.css
+++ b/index.css
@@ -7,12 +7,14 @@ body {
     font-family: sans-serif;
     font-size: 20px;
     color: black;
+    text-align: center;
 }
 
 .informacion {
      font-family: sans-serif;
      font-size: 20px;
 color: black;
+text-align: center;
 }
 
 .contacto {
@@ -20,6 +22,7 @@ color: black;
     font-family: sans-serif;
     color: blue;
     font-style: italic;
+    text-align: center;
 }
 #nombre {
     text-align: center;
@@ -28,4 +31,51 @@ color: black;
 #titulo {
     text-align: center;
     font-size: 30px;
+}
+.foto {
+    text-align: center;
+}
+@media (max-width: 767px) {
+  /* estilos para celulares */
+  img {
+    width: 80%; 
+  }
+
+  .descripcion,
+  .informacion {
+    font-size: 16px; 
+  }
+
+  #nombre {
+    font-size: 28px;
+  }
+
+  #titulo {
+    font-size: 20px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+  /* estilo para tablets */
+  img {
+    width: 40%;
+  }
+
+  .descripcion,
+  .informacion {
+    font-size: 18px;
+  }
+
+  #nombre {
+    font-size: 32px;
+  }
+
+  #titulo {
+    font-size: 24px;
+  }
+}
+@media (min-width: 1024px) {
+  /* estilo para pantallas grandes */
+  img {
+    width: 20 ;
+}
 }
